--- a/Pipfile
+++ b/Pipfile
@@ -6,11 +6,13 @@ name = "pypi"
 [packages]
 click = "*"
 colorama = "*"
-
-[dev-packages]
 pylint = "*"
 pytest = "*"
 black = "*"
+pandas = "*"
+sqlalchemy = "*"
+
+[dev-packages]
 
 [requires]
 python_version = "3.10"
